--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+       <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -24,38 +24,38 @@
       margin: 0;
       padding: 0;
       display: flex;
-      gap: 42px;
+      gap: 38px;
       justify-content: center;
-      font-size: 1.1em;
+      font-size: 1.07em;
     }
     nav ul li a {
       text-decoration: none;
       color: #222;
       font-weight: 500;
-      transition: color 0.2s;
+      transition: color 0.16s;
     }
     nav ul li a:hover {
       color: #2156dd;
     }
     header {
       text-align: center;
-      padding: 65px 16px 38px 16px;
+      padding: 54px 16px 28px 16px;
       background: #fff;
-      margin-bottom: 20px;
+      margin-bottom: 18px;
     }
     header img {
-      width: 150px;
+      width: 130px;
       border-radius: 50%;
-      margin-bottom: 18px;
+      margin-bottom: 16px;
       border: 4px solid #e1e8f0;
       box-shadow: 0 2px 10px rgba(0,0,0,0.09);
     }
     header h1 {
-      font-size: 2.5em;
-      margin-bottom: 0.3em;
+      font-size: 2.3em;
+      margin-bottom: 0.18em;
     }
     header h2 {
-      font-size: 1.22em;
+      font-size: 1.14em;
       font-weight: 400;
       color: #666;
       margin-top: 0;
@@ -63,111 +63,112 @@
     section {
       max-width: 960px;
       margin: 0 auto 32px auto;
-      padding: 32px;
+      padding: 28px;
       background: #fff;
       border-radius: 16px;
-      box-shadow: 0 2px 12px rgba(20,42,70,0.08);
+      box-shadow: 0 2px 11px rgba(20,42,70,0.07);
     }
     section h3 {
-      font-size: 1.35em;
-      margin-bottom: 24px;
+      font-size: 1.27em;
+      margin-bottom: 18px;
       color: #2156dd;
     }
     .cards {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 32px;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 28px;
     }
     .card {
-      background: #f2f6ff;
+      background: #f6faff;
       border: 1px solid #e1e8f0;
-      border-radius: 12px;
-      padding: 26px 18px 18px 18px;
-      min-height: 230px;
+      border-radius: 11px;
+      padding: 18px 14px 14px 14px;
+      min-height: 180px;
       text-align: left;
       box-sizing: border-box;
     }
     .card-title {
       font-weight: 600;
-      margin-bottom: 10px;
-      font-size: 1.15em;
+      margin-bottom: 8px;
+      font-size: 1.08em;
     }
     .card-img {
       width: 100%;
-      height: 130px;
+      height: 110px;
       background: #ececec;
       color: #888;
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: 8px;
-      margin-bottom: 13px;
+      border-radius: 7px;
+      margin-bottom: 11px;
       overflow: hidden;
     }
     .card-img img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border-radius: 8px;
+      border-radius: 7px;
     }
     /* Certificates styling */
     .certificates {
       display: flex;
       flex-wrap: wrap;
-      gap: 32px;
-      margin-bottom: 16px;
+      gap: 26px;
+      margin-bottom: 13px;
       justify-content: center;
     }
     .certificate {
-      flex: 1 1 300px;
+      flex: 1 1 270px;
       background: #fafffa;
       border: 1px solid #e1e8f0;
-      border-radius: 10px;
-      padding: 20px;
+      border-radius: 9px;
+      padding: 12px;
       margin-bottom: 8px;
       text-align: left;
       box-sizing: border-box;
     }
     .certificate img {
       width: 100%;
-      max-width: 290px;
-      border-radius: 6px;
-      margin-bottom: 8px;
+      max-width: 230px;
+      border-radius: 5px;
+      margin-bottom: 6px;
       background: #ececec;
     }
     .media-list {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 26px;
+      gap: 18px;
     }
     .media-item {
-      margin-bottom: 18px;
+      margin-bottom: 11px;
       background: #f4f8ff;
-      border-radius: 15px;
-      padding: 22px;
+      border-radius: 12px;
+      padding: 16px;
       border: 1px solid #e1e8f0;
       box-sizing: border-box;
-      min-height: 220px;
+      min-height: 160px;
     }
     .media-item iframe {
       width: 100%;
-      height: 150px;
-      border-radius: 9px;
-      margin-bottom: 10px;
+      height: 120px;
+      border-radius: 8px;
+      margin-bottom: 7px;
       border: none;
     }
     .skills-list {
       display: flex;
       flex-wrap: wrap;
-      gap: 18px;
-      margin-bottom: 18px;
+      gap: 11px;
+      margin-bottom: 14px;
       list-style-type: disc;
       padding-left: 18px;
+      font-size: 0.97em;
     }
     .contact-links {
-      margin-top: 12px;
+      margin-top: 8px;
       display: flex;
-      gap: 24px;
+      gap: 18px;
       align-items: center;
       flex-wrap: wrap;
     }
@@ -175,33 +176,37 @@
       text-decoration: none;
       color: #2156dd;
       font-weight: 600;
-      font-size: 1.12em;
+      font-size: 1.01em;
       display: flex;
       align-items: center;
-      gap: 8px;
-      transition: color 0.2s;
+      gap: 6px;
+      transition: color 0.16s;
     }
     .contact-links a:hover {
       color: #0077b5;
     }
     .contact-links img {
-      width: 28px;
-      height: 28px;
-      border-radius: 8px;
+      width: 21px;
+      height: 21px;
+      border-radius: 7px;
+    }
+    .yt-small {
+      width: 19px;
+      vertical-align: middle;
     }
     @media (max-width: 900px) {
       section {
-        padding: 16px;
+        padding: 12px;
       }
       .cards, .media-list, .certificates {
         grid-template-columns: 1fr;
         flex-direction: column;
       }
       .media-item iframe {
-        height: 180px;
+        height: 140px;
       }
       header img {
-        width: 105px;
+        width: 90px;
       }
     }
     @media (max-width: 600px) {
@@ -209,13 +214,13 @@
         grid-template-columns: 1fr;
       }
       header h1 {
-        font-size: 1.4em;
+        font-size: 1.2em;
       }
       section h3 {
-        font-size: 1.04em;
+        font-size: 1.01em;
       }
       .certificate img, .card-img img {
-        max-width: 170px;
+        max-width: 135px;
       }
     }
   </style>
@@ -225,6 +230,7 @@
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#achievements">Achievements</a></li>
+      <li><a href="#honours">Honouring Moments</a></li>
       <li><a href="#certificates">Certificates</a></li>
       <li><a href="#media">Videos</a></li>
       <li><a href="#skills">Skills</a></li>
@@ -233,57 +239,14 @@
   </nav>
 
   <header id="about">
-    <img src="profile.jpg" alt="Raj Shekhar Sharma Photo"><!-- Replace with actual image filename -->
+    <img src="profile.jpg" alt="Raj Shekhar Sharma Photo"><!-- Your main profile photo here -->
     <h1>Raj Shekhar Sharma</h1>
     <h2>Space Science Innovator | IBR Achiever | Google AI Certified</h2>
     <p>
-      An aspiring science and technology enthusiast from Jalandhar, Punjab.<br>
-      Focused on deep space communication, AI, and inspiring youth.
+      Tech enthusiast and young inventor from Jalandhar, Punjab.<br>
+      Focus: deep space communication, AI, and youth inspiration.
     </p>
   </header>
-  <!-- Honouring Moments Section -->
-<section id="honours">
-  <h3>Honouring Moments</h3>
-  <div class="cards">
-    <div class="card">
-      <div class="card-title">Honoured by Dr. Himanshu Aggarwal, IAS & DC</div>
-      <div class="card-img">
-        <img src="20250812_125026.jpg" alt="Raj honoured by IAS DC Dr Himanshu Aggarwal"><!-- Image 1 -->
-      </div>
-      <div>
-        Received recognition and award from District Commissioner Dr. Himanshu Aggarwal (IAS), highlighting extraordinary achievement.
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-title">Honoured by Head of Diocese Board, Jalandhar</div>
-      <div class="card-img">
-        <img src="Untitled-3.JPG" alt="Raj honoured by Head of Diocese Board"><!-- Image 2 -->
-      </div>
-      <div>
-        Felicitated by the leader of the Diocese Board for outstanding academic and innovation excellence.
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-title">Raj Shekhar Sharma with IBR Medals</div>
-      <div class="card-img">
-        <img src="IMG-20250820-WA0011.jpg" alt="Raj Shekhar Sharma IBR Medal"><!-- Image 3 -->
-      </div>
-      <div>
-        Wearing the prestigious India Book of Records medals with pride after national achievement.
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-title">Honoured by Dr. Himanshu Aggarwal, IAS & DC</div>
-      <div class="card-img">
-        <img src="IMG-20250812-WA0036.jpg" alt="Raj awarded by IAS DC Dr Himanshu Aggarwal"><!-- Image 4 -->
-      </div>
-      <div>
-        Awarded the India Book of Records medal and certificate by District Commissioner Dr. Himanshu Aggarwal (IAS).
-      </div>
-    </div>
-  </div>
-</section>
-
 
   <section id="achievements">
     <h3>Major Achievements</h3>
@@ -291,18 +254,18 @@
       <div class="card">
         <div class="card-title">Space Message Transmission</div>
         <div class="card-img">
-          <img src="spacespeak.png" alt="SpaceSpeak Certificate"><!-- Replace with actual image filename -->
+          <img src="spacespeak.png" alt="SpaceSpeak Certificate"><!-- SpaceSpeak certificate image -->
         </div>
         <div>
-          Sent a personal family message into deep space and received official recognition from SpaceSpeak in 2025.<br>
+          Sent a personal message into deep space, recognized by SpaceSpeak in 2025.<br>
           <b>Certificate Date:</b> July 9, 2025<br>
-          
+          <a href="https://www.spacespeak.com/Messages/128381" target="_blank">Track message</a>
         </div>
       </div>
       <div class="card">
         <div class="card-title">India Book of Records – IBR Achiever</div>
         <div class="card-img">
-          <img src="ibr.png" alt="India Book of Records Certificate"><!-- Replace with actual image filename -->
+          <img src="ibr.png" alt="India Book of Records Certificate"><!-- IBR certificate image -->
         </div>
         <div>
           Honored as an IBR Achiever for transmitting a message into space at the age of 15.<br>
@@ -312,23 +275,65 @@
     </div>
   </section>
 
+  <section id="honours">
+    <h3>Honouring Moments</h3>
+    <div class="cards">
+      <div class="card">
+        <div class="card-title">Honoured by Dr. Himanshu Aggarwal, IAS & DC</div>
+        <div class="card-img">
+          <img src="20250812_125026.jpg" alt="Raj honoured by IAS DC Dr Himanshu Aggarwal">
+        </div>
+        <div>
+          Received award from District Commissioner Dr. Himanshu Aggarwal (IAS), recognizing exceptional achievement.
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-title">Honoured by Head of Diocese Board, Jalandhar</div>
+        <div class="card-img">
+          <img src="Untitled-3.JPG" alt="Raj honoured by Head of Diocese Board">
+        </div>
+        <div>
+          Felicitated by the Head of Diocese Board, Jalandhar for innovation and excellence.
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-title">Raj Shekhar Sharma with IBR Medals</div>
+        <div class="card-img">
+          <img src="IMG-20250820-WA0011.jpg" alt="Raj Shekhar Sharma IBR Medal">
+        </div>
+        <div>
+          Wearing the prestigious India Book of Records medals after national achievement.
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-title">Honoured by Dr. Himanshu Aggarwal, IAS & DC</div>
+        <div class="card-img">
+          <img src="IMG-20250812-WA0036.jpg" alt="Raj awarded by IAS DC Dr Himanshu Aggarwal">
+        </div>
+        <div>
+          Awarded IBR medal and certificate by District Commissioner Dr. Himanshu Aggarwal (IAS).
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="certificates">
     <h3>Google AI Certificates</h3>
     <div class="certificates">
       <div class="certificate">
-        <img src="ai.png" alt="Introduction to AI Certificate"><!-- Replace with actual image filename -->
+        <img src="ai.png" alt="Introduction to AI Certificate"><!-- Introduction to AI certificate image -->
         <b>Introduction to AI</b><br>
         Completed August 11, 2025<br>
         <a href="https://coursera.org/verify/I43U7313BWA9" target="_blank">Verify</a>
       </div>
       <div class="certificate">
-        <img src="prompting.png" alt="Discover the Art of Prompting Certificate"><!-- Replace with actual image filename -->
+        <img src="prompting.png" alt="Discover the Art of Prompting Certificate"><!-- Art of Prompting certificate image -->
         <b>Discover the Art of Prompting</b><br>
         Completed August 26, 2025<br>
         <a href="https://coursera.org/verify/FP0D2D90BTUR" target="_blank">Verify</a>
       </div>
       <div class="certificate">
-        <img src="productivity.png" alt="Maximize Productivity With AI Tools Certificate"><!-- Replace with actual image filename -->
+        <img src="productivity.png" alt="Maximize Productivity With AI Tools Certificate"><!-- Productivity certificate image -->
         <b>Maximize Productivity With AI Tools</b><br>
         Completed August 14, 2025<br>
         <a href="https://coursera.org/verify/U15BZ1XW5UFK" target="_blank">Verify</a>
@@ -342,17 +347,17 @@
       <div class="media-item">
         <iframe src="https://www.youtube.com/embed/FJRIObJnih0" allowfullscreen></iframe>
         <b> Space message Documentary</b><br>
-       Youngest Individual to send a personal message into deep space
+        Youngest individualto transmit message into deep space.
       </div>
       <div class="media-item">
         <iframe src="https://www.youtube.com/embed/bzLbLDdOyFo" allowfullscreen></iframe>
         <b>Unboxing My India Book of Records</b><br>
-        Experience the special moment of receiving national recognition.
+        Unboxing and celebrating national recognition.
       </div>
       <div class="media-item">
         <iframe src="https://www.youtube.com/embed/wQwvfvJUa34" allowfullscreen></iframe>
         <b>Space Message Update</b><br>
-        Presenting the latest updates about transmitting a personal message into space.
+        Latest updates on transmitting a personal message into space.
       </div>
     </div>
   </section>
@@ -369,8 +374,9 @@
     </ul>
     <div>
       <b>YouTube Channel:</b>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube Icon">
-
+      <a href="https://youtube.com/@brainybytes-so1iq?si=dAwgD9mInB1yRTBu" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube Icon" class="yt-small"> Brainy Bytes</a>
+    </div>
   </section>
 
   <section id="contact">
@@ -380,7 +386,7 @@
       <a href="https://www.instagram.com/rajs112k?igsh=MTFwaGVpcmJ1NGRn" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Icon">Instagram</a>
       <a href="https://www.linkedin.com/in/raj-shekhar-sharma-79a503373?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Icon">LinkedIn</a>
     </div>
-    <form style="margin-top:28px;">
+    <form style="margin-top:22px;">
       <label for="name">Name:</label><br>
       <input type="text" id="name" name="name" required><br>
       <label for="email">Email:</label><br>
@@ -392,3 +398,4 @@
   </section>
 </body>
 </html>
+     
