--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Raj Shekhar Sharma | Space Innovator</title>
+  <title> Raj Shekhar Sharma | Space Enthusiast | Young Innovator </title>
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
@@ -399,3 +399,4 @@
 </body>
 </html>
      
+
