--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
   </nav>
 
   <header id="about">
-    <img src="profile.jpg" alt="Raj Shekhar Sharma Photo"><!-- Your main profile photo here -->
+    <img src="profile.jpg" alt="Raj Shekhar Sharma Photo"><!-- "https://i.postimg.cc/nL36W3g0/Untitled-2.png"-->
     <h1>Raj Shekhar Sharma</h1>
     <h2>Space Science Innovator | IBR Achiever | Google AI Certified</h2>
     <p>
@@ -399,5 +399,6 @@
 </body>
 </html>
      
+
 
 
