--- a/index.html
+++ b/index.html
@@ -239,7 +239,9 @@
   </nav>
 
   <header id="about">
-    <img src="profile.jpg" alt="Raj Shekhar Sharma Photo"><!-- "https://i.postimg.cc/nL36W3g0/Untitled-2.png"-->
+    <img src="profile.jpg" alt="Raj Shekhar Sharma Photo"> 
+         <img src="https://i.postimg.cc/nL36W3g0/Untitled-2.png" alt="Raj Shekhar Sharma Photo">
+
     <h1>Raj Shekhar Sharma</h1>
     <h2>Space Science Innovator | IBR Achiever | Google AI Certified</h2>
     <p>
@@ -399,6 +401,7 @@
 </body>
 </html>
      
+
 
 
 
